// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> matches snapshot (closed) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        false,
      ]
    }
    testID="collapsible-pressable"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F0F0F3",
          },
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
        ]
      }
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="chevron.right"
        size={14}
        style={
          [
            {
              "height": 14,
              "width": 14,
            },
            {
              "transform": [
                {
                  "rotate": "90deg",
                },
              ],
            },
          ]
        }
        tint={4278190080}
        tintColor="#000000"
        type="monochrome"
        weight="bold"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#000000",
          },
          false,
          false,
          {
            "fontSize": 14,
            "fontWeight": 500,
            "lineHeight": 20,
          },
          false,
          false,
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      Snap
    </Text>
  </View>
</View>
`;

exports[`<Collapsible /> matches snapshot (open) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        false,
      ]
    }
    testID="collapsible-pressable"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F0F0F3",
          },
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
        ]
      }
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="chevron.right"
        size={14}
        style={
          [
            {
              "height": 14,
              "width": 14,
            },
            {
              "transform": [
                {
                  "rotate": "-90deg",
                },
              ],
            },
          ]
        }
        tint={4278190080}
        tintColor="#000000"
        type="monochrome"
        weight="bold"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#000000",
          },
          false,
          false,
          {
            "fontSize": 14,
            "fontWeight": 500,
            "lineHeight": 20,
          },
          false,
          false,
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      Snap Open
    </Text>
  </View>
  <View
    entering={
      {
        "duration": [MockFunction] {
          "calls": [
            [
              200,
            ],
            [
              200,
            ],
            [
              200,
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": [Circular],
            },
            {
              "type": "return",
              "value": [Circular],
            },
            {
              "type": "return",
              "value": [Circular],
            },
          ],
        },
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F0F0F3",
          },
          {
            "borderRadius": 16,
            "marginLeft": 24,
            "marginTop": 16,
            "padding": 24,
          },
        ]
      }
    >
      <Text>
        Open Content
      </Text>
    </View>
  </View>
</View>
`;
